--- a/prototypes/4.prototype/src/App.css
+++ b/prototypes/4.prototype/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+
+.fa{
+   color: #ff0000;
+   background-color: #282c34;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
